<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:background="@drawable/background"
    >


    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_register"
        android:textColor="@color/white"
        android:layout_margin="15dp"
        />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="50dp"

        />

    <EditText
        android:id="@+id/regUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp"
        android:textColor="@color/white"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:background="#30ffffff"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawablePadding="15dp"
        android:inputType="text"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24" />


    <EditText
        android:id="@+id/regEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/regUsername"
        android:textColor="@color/white"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:background="#30ffffff"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
        android:drawablePadding="20dp"
        />


    <EditText
        android:id="@+id/regPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/regEmail"
        android:textColor="@color/white"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:background="#30ffffff"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_baseline_password_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:id="@+id/rePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/regPassword"
        android:textColor="@color/white"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/white"
        android:background="#30ffffff"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:padding="15dp"
        android:drawableLeft="@drawable/ic_baseline_password_24"
        android:drawablePadding="20dp"
        />





    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rePassword"
        android:text="@string/register"
        android:textSize="24sp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        app:cornerRadius="7dp"
        />


    <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_up_with"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/socialIcons"

        />

    <LinearLayout
        android:id="@+id/socialIcons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/fb"
            android:layout_margin="20dp"
            />


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/google"
            android:layout_margin="20dp"
            />


        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/twitter"
            android:layout_margin="20dp"
            />



    </LinearLayout>


</RelativeLayout>